--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
 kotlin = "2.0.21"
+kotest = "6.0.0.M1"
 
 [libraries]
 kotlin-gradle-api = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin-api", version.ref = "kotlin" }
 
 # actual plugins, but needed as dependencies in buildSrc
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotest-gradle-plugin = { module = "io.kotest:kotest-framework-multiplatform-plugin-gradle", version.ref = "kotest" }
 
 [bundles]
 build-src = [
@@ -14,5 +16,6 @@ build-src = [
 
 kreate-dependencies = [
     "kotlin-gradle-api",
-    "kotlin-gradle-plugin"
+    "kotlin-gradle-plugin",
+    "kotest-gradle-plugin"
 ]
