feat: added dokka plugin

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 kotlin = "2.0.21"
 kotest = "6.0.0.M1"
+dokka = "1.9.20"
 
 [libraries]
 kotlin-gradle-api = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin-api", version.ref = "kotlin" }
@@ -8,6 +9,7 @@ kotlin-gradle-api = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin-api", 
 # actual plugins, but needed as dependencies in buildSrc
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotest-gradle-plugin = { module = "io.kotest:kotest-framework-multiplatform-plugin-gradle", version.ref = "kotest" }
+dokka-gradle-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
 
 [bundles]
 build-src = [
@@ -17,5 +19,6 @@ build-src = [
 kreate-dependencies = [
     "kotlin-gradle-api",
     "kotlin-gradle-plugin",
-    "kotest-gradle-plugin"
+    "kotest-gradle-plugin",
+    "dokka-gradle-plugin"
 ]
