--- a/example-rust/Cargo.toml
+++ b/example-rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "example"
-description = "An example project"
+description = "An example project."
 authors = ["Davils <contact@davils.net>"]
 license = "All rights reserved"
 version = "0.0.0"
@@ -13,4 +13,4 @@ crate-type = ["staticlib"]
 cbindgen = "0.27.0"
  
 [dependencies]
-libc = "0.2.164"
+libc = "0.2.167"
